--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <article>
         <h3>FIRST MEAL IN SEOUL!</h3>
         <div id="first-meal">
-          <img src="img/IMG_3209.JPG" alt="A picture of Sinseon Seolnongtang">
+          <img src="img/IMG_3209 壓縮.jpg" alt="A picture of Sinseon Seolnongtang">
           <div id="first-meal-text">
             <span id="text-one">
               After checking in our room, it was almost dinner time.
