--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
     <link href="index.css" rel="stylesheet">
     <title>My Own Website</title>
   </head>
+
   <body>
     <h1>WELCOME TO MY WEBSITE!</h1>
-    <aside>
-      <ul>Info of ME!</ul>
-      <ul>Korea</ul>
-    </aside>
-    <main>
-      <h2>Info of ME!</h2>
-      <div id="personal-info">
-        <img alt="selfie">
-        <article>
-          <li>Name: Christina Kuo</li>
-          <li>Where I'm from: Taiwan</li>
-          <li>School: University of Washington Sophmore</li>
-          <li>Intended major:
-              Computer Science / Informatics / Human Centered Design & Engineering</li>
-        </article>
+
+    <div id="personal-info">
+      <aside>
+        <span id="more-pages">See more pages:</span>
+        <li><a href="index.html">Info of ME!</a></li>
+        <li><a href="korea_first.html">Korea</a></li>
+      </aside>
+      <div id="info-of-me">
+        <h2>Info of ME!</h2>
+        <div>
+          <img alt="photo of me">
+          <article>
+            <li>Name: Christina Kuo</li>
+            <li>Where I'm from: Taiwan</li>
+            <li>School: University of Washington Sophmore</li>
+            <li>Intended major:
+                Computer Science / Informatics / Human Centered Design & Engineering</li>
+          </article>
+        </div>
       </div>
-      <div id="more-info">
-        <li>Personality: Although I'm a shy person,
-            I still like to make friends and meet people from different places.</li>
-        <li>What I like: Travel, building websites, playing video games, coding
-            and editing videos.</li>
-        <li>Language: My first language is Mandirine, and second is English.</li>
-        <li>My dream: I hope I can become a software engineering
-            and develop an app or a video game!</li>
-      </div>
-      <p>Hope you enjoy my website!</p>
-    </main>
+    </div>
+
+    <div id="more-info">
+      <li>Personality: Although I'm a shy person,
+          I still like to make friends and meet people from different places.</li>
+       <li>What I like: Travel, building websites, playing video games, coding
+          and editing videos.</li>
+      <li>Language: My first language is Mandirine, and second is English.</li>
+      <li>My dream: I hope I can become a software engineering
+          and develop an app or a video game!</li>
+    </div>
+    <p>Hope you enjoy my website!</p>
   </body>
 </html>
