--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        <li>What I like: Travel, building websites, playing video games, coding
           and editing videos.</li>
       <li>Language: My first language is Mandarin, and second is English.</li>
-      <li>My dream: I hope I can become a software engineering
+      <li>My dream: I hope I can become a software engineer
           and develop an app or a video game!</li>
     </div>
     <p>Hope you enjoy my website!</p>
