--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>WELCOME TO MY WEBSITE!</h1>
+    <h1><span class="red">WELCOME</span> TO <span class="blue">MY WEBSITE</span> !</h1>
 
     <div id="personal-info">
 
@@ -18,10 +18,10 @@
       </aside>
 
       <div id="info-of-me">
-        <h2>- - - <span id="red">Info</span> of <span id="blue">ME</span> - - -</h2>
+        <h2>- - - <span class="red">Info</span> of <span class="blue">ME</span> - - -</h2>
         <div id="img-and-info">
           <img src="img/IMG_8062.JPG" alt="photo of me">
-          <article>
+          <article id="my-info">
             <li>Name: Christina Kuo</li>
             <li>Where I'm from: Taiwan</li>
             <li>School: University of Washington Sophmore</li>
@@ -44,6 +44,6 @@
       <li>My dream: I hope I can become a software engineer
           and develop an app or a video game!</li>
     </div>
-    <p>Hope you enjoy my website!</p>
+    <p id="enjoy"><span class="red">Hope</span> you <span class="blue">enjoy</span> my website!</p>
   </body>
 </html>
