--- a/korea_first.html
+++ b/korea_first.html
@@ -63,5 +63,7 @@
     </section>
   </body>
   <footer>
+    <p><a href="index.html">&larr; Go back to main (info) page</a></p>
+    <p>Go to Second day in Seoul &rarr;</p>
   </footer>
 </html>
