--- a/korea_first.html
+++ b/korea_first.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link href="korea_first.css" rel="stylesheet">
     <title>Let's go to Seoul, Korea!</title>
