--- a/korea_first.html
+++ b/korea_first.html
@@ -1,4 +1,4 @@
-<!--This webpage is for the introduction of drama-->
+<!--This webpage is for the introduction of my trip-->
 
 <!DOCTYPE html>
 <html>
@@ -65,6 +65,6 @@
   </body>
   <footer>
     <p><a href="index.html">&larr; Go back to main (info) page</a></p>
-    <p>Go to Second day in Seoul &rarr;</p>
+    <p><a href="korea_second.html">Go to Second day in Seoul &rarr;</a></p>
   </footer>
 </html>
