--- a/korea_second.html
+++ b/korea_second.html
@@ -8,24 +8,32 @@
   </head>
   <body>
     <h1><span class="red">My trip</span> to <span class="blue">Seoul, Korea</span> !</h1>
-    <p>
 
-    </p>
     <section id="second-day">
-      <h2>- - - Second day in Seoul - - -</h2>
+      <h2>- - - <span class="red">Second day</span> in <span class="blue">Seoul</span> - - -</h2>
       <article>
         <h3>DONGDAEMUN - JUST CHILLING AND LUNCH (YUM YUM)</h3>
-        <div id="Dongdaemun">
-          <img src="img/korea 2/IMG_5220.jpg" id="river">
-          <p>The first stop for today was Dongdaemun, where is famous for its shopping area.
-            We not only went shopping but also we walked along the Cheonggyecheon stream. Chilling!
-            After that, we went to have our first lunch in Seoul - Jin Ok Hwa Original Chicken.
+
+        <div id="Dongdaemun-stream">
+          <img src="img/korea 2/IMG_5220.jpg" id="stream-img" alt="A pic for Cheonggyecheon stream">
+          <div>
+            <p id="text-one">The first stop for the second day was Dongdaemun, where is famous for its shopping area.
+              We not only went shopping, but also we walked along the Cheonggyecheon stream.
+              The weather was really hot, but we felt so relaxed just walking and looking at the water.
+              No need to worry about anything!
+            </p>
+            <p id="chill">- - <span class="red">CHILLING</span> <span class="blue">CHILLING</span>- -</p>
+          </div>
+        </div>
+
+        <div id="Dongdaemun-lunch">
+          <p id="text-two">After that, we went to have our first lunch in Seoul - Jin Ok Hwa Original Chicken.
             The moment we sat down, the waitress put the big pot with a whole chicken in it in front of us.
             We were shocked because it was A LOT! However, we still finished it because it was so good!
             The chicken was so tender, and the rice cake is also really soft!
             We all recommend this restaurant!
           </p>
-          <img src="img/korea 2/IMG_0373.jpg" id="lunch" alt="A pic for our lunch">
+          <img src="img/korea 2/IMG_0373.jpg" id="lunch-img" alt="A pic for our lunch">
         </div>
       </article>
 
@@ -53,8 +61,7 @@
         <h3>DINNER TIME!</h3>
         <div id="cheese">
           <img src="img/korea 2/IMG_7924.jpg">
-          <img src="img/korea 2/IMG_3462.jpg">
-          <p>
+          <p id="text-three">
             Walking for the whole day, we were so hungry.
             Ｗe went back to Myeong-dong to have our dinner (pictures on the left).
             The cheese tasted so good, especially with the meat and rice cake!
@@ -62,8 +69,9 @@
             and it became fried rice!
             It was a big portion for three people. We were so full after dinner lol
           </p>
+          <img src="img/korea 2/IMG_3462.jpg">
         </div>
-        <p>Then we went shopping again hehe!</p>
+        <p id="text-four">Then we went shopping again hehe!</p>
       </article>
     </section>
   </body>
