--- a/korea_second.html
+++ b/korea_second.html
@@ -74,5 +74,14 @@
         <p id="text-four">Then we went shopping again hehe!</p>
       </article>
     </section>
+
+    <section>
+
+    </section>
   </body>
+
+  <footer>
+    <p><a href="korea_first.html">&larr; Go back to First day in Seoul</a></p>
+    <p>Go to Third day in Seoul &rarr;</a></p>
+  </footer>
 </html>
