--- a/korea_second.html
+++ b/korea_second.html
@@ -43,7 +43,7 @@
           <img src="img/korea 2/IMG_0310.jpg">
           <img src="img/korea 2/IMG_4659.jpg">
           <img src="img/korea 2/IMG_4656.jpg">
-          <img src="img/korea 2/IMG_1581.JPG">
+          <img src="img/korea 2/IMG_1581.jpg">
         </div>
         <p id="tower-text">
           After having lunch, we went to the landmark of Seoul - Seoul Tower!
