--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span id="more-pages">See more pages:</span>
         <li><a href="index.html">Info of ME!</a></li>
         <li><a href="korea_first.html">Seoul Day 1</a></li>
-        <li><a href="korea_first.html">Seoul Day 2</a></li>
+        <li><a href="korea_second.html">Seoul Day 2</a></li>
       </aside>
 
       <div id="info-of-me">
