--- a/korea_third.html
+++ b/korea_third.html
@@ -6,10 +6,69 @@
     <link href="korea_third.css" rel="stylesheet">
     <title>Let's go to Seoul, Korea!</title>
   </head>
+
   <body>
     <h1><span class="red">My trip</span> to <span class="blue">Seoul, Korea</span> !</h1>
-  </body>
-  <footer>
+    <section id="third-day">
+      <h2>- - - <span class="red">Third day</span> in <span class="blue">Seoul</span> - - -</h2>
 
-  </footer>
+      <h3>EWHA WOMANS UNIVERSITY</h3>
+      <article id="uni">
+        <div id="intro-uni">
+          <img src="img/korea 3/IMG_1211.JPG" alt="pics of the university" id="uni-img">
+          <div id="uni-texts">
+            <p>
+              After breakfast, we went to Ewha Womans University,
+              which is one of the most popular and beautiful universities in Seoul.
+              We are not the type of people who like to take a lot of pretty pics.
+              So instead of taking photos, we walked and enjoyed the gorgeous campus.
+            </p>
+            <p>
+              I didn’t bring enough clothes to Seoul
+              because I planned to buy clothes there and wore them immediately.
+              So, we had to go shopping, lol.
+              There was a street close to the university that was famous for shopping.
+              We spent a lot of time and bought A LOT OF clothes there.
+            </p>
+          </div>
+        </div>
+
+        <div id="lunch">
+          <p id="bulbap">
+            We also had our lunch, Bulbap, there.
+            At first, it looked like a hotpot with a bunch of cheese in it.
+            After finishing the hotpot, the clerk came and added some rice to it.
+            Then, hotpot turned into fried rice! We were surprised! It tasted so good!
+            The fried rice was quite crunchy and it had some cheese taste in it.
+            If I can go to Seoul again, I definitely will go Bulbap again!
+          </p>
+          <img src="img/korea 3/IMG_2028.JPG">
+        </div>
+      </article>
+
+      <h3>HONGDAE</h3>
+      <article id="hongdae">
+        <p id="hongdae-text">
+          We went to the famous shopping area in Seoul -- -- Hongdae.
+          Yes, we went shopping again lol. But unfortunately, the weather wasn’t good.
+          It was pouring. So, we didn’t take many photos lol.
+          But we bought some shoes there, or maybe only me? Lol.
+          For dinner, we had Korean bbq -- -- Tong Tong.
+          I was excited about the Korean bbq, and it didn’t let me down!
+          Korean bbq is the best!
+        </p>
+      </article>
+
+      <article id="finish">
+        <img src="img/korea 3/IMG_5261.JPG">
+        <div>That’s all for our shopping day!</div>
+      </article>
+    </section>
+
+    <footer>
+      <p><a href="korea_second.html">&larr; Go back to Second day in Seoul</a></p>
+      <p><a href="index.html">Go back to main (info) page</a></p>
+      <p>Go to Fourth day in Seoul &rarr;</a></p>
+    </footer>
+  </body>
 </html>
